--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "vscodium-devpodcontainers",
   "displayName": "DevPod Containers",
   "description": "DevContainers support for VS Codium via DevPods",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "engines": {
     "vscode": "^1.90.2"
   },
-  "publisher": "3timeslazy",
+  "publisher": "cl0vrfi3ld",
   "repository": {
     "type": "git",
-    "url": "https://github.com/3timeslazy/vscodium-devpodcontainers.git"
+    "url": "https://github.com/cl0vrfi3ld/vscodium-devpodcontainers.git"
   },
   "license": "SEE LICENSE IN LICENSE",
   "categories": [
@@ -93,17 +93,17 @@
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
     "@types/vscode": "^1.90.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.11.0",
-    "@vscode/test-cli": "^0.0.9",
+    "@typescript-eslint/eslint-plugin": "8.2.0",
+    "@typescript-eslint/parser": "8.2.0",
+    "@vscode/test-cli": "0.0.10",
     "@vscode/test-electron": "^2.4.0",
-    "esbuild": "^0.21.5",
-    "eslint": "^8.57.0",
+    "esbuild": "0.23.1",
+    "eslint": "9.9.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@vscode/vsce": "^2.29.0",
+    "@vscode/vsce": "3.0.0",
     "jsonc-parser": "^3.3.1"
   }
 }
